fix: army name is now based on first line in a file